--- a/index.html
+++ b/index.html
@@ -6,76 +6,63 @@
     <title>Trabalho De Biologia</title>
   </head>
   <style type= "text/css">
-  h1{
-    color: Blue;
+  .colera{
+    color: grey;
     font-size: 25px;
   }
-  h2{
-    color: pink;
-    font-size: 60px;
+  .titulo{
+    color: #836FFF;
+    font-size: 70px;
   }
-  h3{
-    color: white;
+  .titulo2{
+    color: #FAFAD2;
     font-size: 25px;
   }
     *
 {
   padding: 0;
-  margin: 2;
+  margin: 0;
   text-align: center;
   background-color: black;
 }
 .critico{
     color: red;
-    font-size: 30px;
-  
+    font-size: 25px;
 }
 .curto{
     color: green;
-    font-size: 30px;
-  
+    font-size: 25px;
 }
 .bac1{
-    color: red;
-    font-size: 30px;
-  
+    color: #7FFFD4;
+    font-size: 25px;
+}
+.bac2{
+    color: #7FFFD4;
+    font-size: 25px;
 }
       </style>
   <body>
-    <h2>Trabalho De Biologia</h2>
-      <h3>Doenças causadas por bactérias</h3>
-    <h1>
-      <div class="bac1">1 - Cólera</div>
+    <div class="titulo">Trabalho De Biologia</div>
+      <div class="titulo2">Doenças causadas por bactérias</div>
+    <div class="colera">
+      <div class="bac1">1-Cólera</div>
       <img src="colera.jpg" width="500" heigth="500">
       <div>O Quê É:</div>
-    Doença bacteriana que causa diarreia grave e desidratação.
-    Normalmente transmitida pela água.
-      </br>
-    A Cólera é fatal se não for tratada imediatamente.
-      <br>
-    É uma doença muito rara, Menos de 15 mil casos por ano no brasil.
-      <br>
-    O tratamento é feito com auxílio médico.
-      <br>
-    Propaga-se por água ou alimento
-    contaminado.
-      <br>
-    Requer um diagnóstico medico.
-      <br>
-    Sempre requer exames laboratoriais ou de imagem.
-      <br>
+    Doença bacteriana que causa diarreia grave e desidratação.<br>
+    Normalmente transmitida pela água.</br>A Cólera é fatal se não for tratada imediatamente.<br>É uma doença muito rara, Menos de 15 mil casos por ano no brasil.<br>
+    O tratamento é feito com auxílio médico.<br>Propaga-se por água ou alimento
+    contaminado.<br>Requer um diagnóstico medico.<br>Sempre requer exames laboratoriais ou de imagem.<br>Os principais sintomas são diarreia e desidratação. Raramente, choque hemorrágico (quando uma pessoa perde mais de 20% do sangue ou fluido corporal) e convulsões podem ocorrer em casos graves.<br>
     <div class="curto">Curto prazo: Resolve-se em dias ou semanas.</div>
-    <div class="critico">Crítico: Necessita de atendimento de emergência.</div>
-      <br>
-    </h1>
+    <div class="critico">Crítico: Necessita de atendimento de emergência.</div><br>
+      <div class="bac2">2-Febre Maculosa</div>
+      <div>O Quê É</div>
+      Doença infecciosa com uma erupção característica, muitas vezes transmitida pela picada de um carrapato.<br>A febre maculosa é uma doença possivelmente fatal que costuma ser causada pela picada de um carrapato infectado com bactérias da família Rickettsia.<br>É uma doença muito rara, Menos de 15 mil casos por ano no brasil.<br>O tratamento é feito com auxílio médico.<br>Propaga-se por picadas ou ferroadas de animais ou insetos.
+    contaminado.<br>Requer um diagnóstico medico.<br>Sempre requer exames laboratoriais ou de imagem.<br>Os sintomas incluem febre, dor de cabeça e dores musculares. Pode haver erupções, geralmente com pele escura ou crosta no local da picada de carrapato.<br>
+    <div class="curto">Curto prazo: Resolve-se em dias ou semanas.</div>
+    <div class="critico">Crítico: Necessita de atendimento de emergência.</div><br>
+
+    </div>
         <script>
     //window.alert('Olá, Seja bem vindo(a)')
-//*sistema de numer de letras que o nome tem e nome em  maiúsculas e minúsculas*/
-    //var dg = Number(window.prompt('digite um número'))
-    //SOMA DE VALORES
-    //var dgg = Number(window.prompt('digite mais um número')) 
-    //var dggg = dg + dgg
-//window.alert(`a soma entre ${dg} e ${dgg} é igual a ` + dggg)/*SISTEMA DE SOMA PARA ULTILIZAR TIRE OS SIMBOLOS DE COMENTARIO*/
-    </script>
-  </body>
-</html>
+        </script>
