--- a/index.html
+++ b/index.html
@@ -4,67 +4,37 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="" content="">
     <title>Trabalho De Biologia</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <style type= "text/css">
-  .colera{
-    color: grey;
-    font-size: 25px;
-  }
-  .titulo{
-    color: #836FFF;
-    font-size: 70px;
-  }
-  .titulo2{
-    color: #FAFAD2;
-    font-size: 25px;
-  }
-    *
-{
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  background-color: black;
-}
-.critico{
-    color: red;
-    font-size: 25px;
-}
-.curto{
-    color: green;
-    font-size: 25px;
-}
-.bac1{
-    color: #7FFFD4;
-    font-size: 25px;
-}
-.bac2{
-    color: #7FFFD4;
-    font-size: 25px;
-}
-      </style>
+</style>
   <body>
-    <div class="titulo">Trabalho De Biologia</div>
+    <div class="titulo">Trabalho De Biologia</div><br>
       <div class="titulo2">Doenças causadas por bactérias</div>
     <div class="colera">
-      <div class="bac1">1-Cólera</div>
-      <img src="colera.jpg" width="500" heigth="500">
+      <div class="doencas">1-Cólera</div>
+      <img src="colera.jpg" class="img1" width="500" heigth="500">
       <div>O Quê É:</div>
     Doença bacteriana que causa diarreia grave e desidratação.<br>
     Normalmente transmitida pela água.</br>A Cólera é fatal se não for tratada imediatamente.<br>É uma doença muito rara, Menos de 15 mil casos por ano no brasil.<br>
     O tratamento é feito com auxílio médico.<br>Propaga-se por água ou alimento
     contaminado.<br>Requer um diagnóstico medico.<br>Sempre requer exames laboratoriais ou de imagem.<br>Os principais sintomas são diarreia e desidratação. Raramente, choque hemorrágico (quando uma pessoa perde mais de 20% do sangue ou fluido corporal) e convulsões podem ocorrer em casos graves.<br>
-    <div class="curto">Curto prazo: Resolve-se em dias ou semanas.</div>
-    <div class="critico">Crítico: Necessita de atendimento de emergência.</div><br>
-      <div class="bac2">2-Febre Maculosa</div>
-      <div>O Quê É</div>
+    <div class="curto">Curto prazo:</div>Resolve-se em dias ou semanas.
+    <div><div class="critico">Crítico:</div> Necessita de atendimento de emergência.</div>
+      <div class="doencas">2-Febre Maculosa</div>
+      <div>O Quê É:</div>
       Doença infecciosa com uma erupção característica, muitas vezes transmitida pela picada de um carrapato.<br>A febre maculosa é uma doença possivelmente fatal que costuma ser causada pela picada de um carrapato infectado com bactérias da família Rickettsia.<br>É uma doença muito rara, Menos de 15 mil casos por ano no brasil.<br>O tratamento é feito com auxílio médico.<br>Propaga-se por picadas ou ferroadas de animais ou insetos.
     contaminado.<br>Requer um diagnóstico medico.<br>Sempre requer exames laboratoriais ou de imagem.<br>Os sintomas incluem febre, dor de cabeça e dores musculares. Pode haver erupções, geralmente com pele escura ou crosta no local da picada de carrapato.<br>
-    <div class="curto">Curto prazo: Resolve-se em dias ou semanas.</div>
-    <div class="critico">Crítico: Necessita de atendimento de emergência.</div><br>
+    <div class="curto">Curto prazo:</div> Resolve-se em dias ou semanas.
+    <div><div class="critico">Crítico:</div> Necessita de atendimento de emergência.</div><br>
+<div class="titulo2">Doenças Causadas Por Protozoários</div>
+<div class="doencas">1-Amebiase</div>
+<div>O Quê É</div>
+Infecção parasitária do cólon causada pela ameba Entamoeba histolytica.<br>
+A amebíase é uma infecção mais comum em áreas tropicais com más condições de saneamento.<br> Ela é disseminada pela ingestão de alimentos crus, como frutas, que podem ter sido lavados com água local contaminada.<br>Requer um diagnóstico medico.<br>Propaga-se por agua ou alimentos contaminado.
+    contaminado.<br>Requer um diagnóstico medico.<br>Sempre requer exames laboratoriais ou de imagem.<br>
 
     </div>
         <script>
     //window.alert('Olá, Seja bem vindo(a)')
         </script>
-</body>
-</html>
